--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mzeecob/EHR"
+    "url": "https://github.com/mzeecob/EHR"
   },
   "keywords": [
     "EHR",
