database and backend finished

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = "mongodb://127.0.0.1:27017/insurance"
+DATABASE_URL = "mongodb://127.0.0.1:27017/ehr"
 SECRET = "J6Bbb6w1QqmZ8KI6yW5GUh45e90m5qsxWA3DjPHO2tE"
