--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/runtime": "^7.7.6",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "custom-env": "^2.0.1",
